=================
Changes for crash
=================

Unreleased
==========

2024/04/24 0.31.5
=================

- Fixed handling of ``DuplicateKeyException`` errors. After an improvement in
  crate-python 0.34, this error case is conveyed through ``IntegrityError``.
  Beforehand, a more generic ``ProgrammingError`` was used. Thanks, @romseygeek
  and @proddata.

2024/03/19 0.31.4
=================

- Fixed status line display of the executed SQL command, part 2,
  don't display SQL command _arguments_.

2024/03/18 0.31.3
=================

- Fixed status line display of the executed SQL command
- Started using Python Testcontainers for integration testing

2024/02/08 0.31.2
=================

- Update to crate>=0.35.2. It is needed to accompany the recent
  improvements about ``--timeout``.

2024/02/02 0.31.1
=================

- Better catch unauthorized errors when forcing a password prompt.

2024/01/29 0.31.0
=================

- Added command-line argument ``--timeout``, to configure network timeout
  values in seconds. The default connect timeout is five seconds now,
  the default read timeout is the default setting of the ``socket`` module,
  which is "infinite" by default.

2024/01/12 0.30.2
=================

- Added support for setting an external pager via ``\pager <executable>``

- Added ROLE keyword for autocomplete & autocapitalize

2023/11/23 0.30.1
=================

- Added support for Python 3.12.
- Added possible output format choices for ``--format`` argument to
  ``crash --help``. Thanks, @mfussenegger.

2023/07/06 0.30.0
=================

- Fix inconsistent spacing around printed runtime. Thank you, @hammerhead.

- Add support for multi-line input of commands and SQL statements for both
  copy-pasting inside the crash shell and input pipes into crash.

2023/02/16 0.29.0
=================

- Add support for Python 3.11, and drop support for Python 3.5 and 3.6.

- Fix compatibility issue with ``crate-0.30.0`` in the area of comparing